2023-09-20T16:19:04Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6251352494 # 1913
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-20
* notice: last 14d: unq all: 21 202
* notice: prev accum: outdated-unq outdated-all / unq all: 363 1587 / 386 1773
* notice: next accum: outdated-unq outdated-all / unq all: 363 1587 / 387 1789
* notice: prev exec diff / last date diff / accum: unq all: +1 +16 -0 -0 / +1 +16 -0 -0 / 1 16
* notice: removed / changed dates: [] / [2023-09-20]

2023-09-19T16:19:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6238246039 # 1910
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-19
* notice: last 14d: unq all: 20 186
* notice: prev accum: outdated-unq outdated-all / unq all: 362 1582 / 385 1759
* notice: next accum: outdated-unq outdated-all / unq all: 363 1587 / 386 1773
* notice: prev exec diff / last date diff / accum: unq all: +1 +14 -0 -0 / +1 +14 -0 -0 / 1 14
* notice: removed / changed dates: [2023-09-05] / [2023-09-19]

2023-09-18T08:18:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6219944777 # 1906
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-18
* notice: last 14d: unq all: 20 177
* notice: prev accum: outdated-unq outdated-all / unq all: 362 1582 / 384 1751
* notice: next accum: outdated-unq outdated-all / unq all: 362 1582 / 385 1759
* notice: prev exec diff / last date diff / accum: unq all: +1 +8 -0 -0 / +1 +8 -0 -0 / 1 8
* notice: removed / changed dates: [] / [2023-09-18]

2023-09-18T01:03:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6216976332 # 1905