@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-09-20T16:19:04Z",
+  "timestamp" : "2023-09-21T01:02:55Z",
   "count_outdated" : 1587,
   "uniques_outdated" : 363,
-  "count" : 1789,
-  "uniques" : 387,
+  "count" : 1810,
+  "uniques" : 388,
   "views" : [
     {
       "timestamp": "2023-09-07T00:00:00Z",
@@ -106,12 +106,12 @@
     },
     {
       "timestamp": "2023-09-20T00:00:00Z",
-      "count": 16,
-      "count_minmax": [ 16, 16 ],
-      "count_decinc": [ 0, 16 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 37,
+      "count_minmax": [ 16, 37 ],
+      "count_decinc": [ 0, 37 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
