@@ -1,3 +1,12 @@
+2023-09-21T01:02:55Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6255844867 # 1914
+* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-21
+* notice: last 14d: unq all: 22 223
+* notice: prev accum: outdated-unq outdated-all / unq all: 363 1587 / 387 1789
+* notice: next accum: outdated-unq outdated-all / unq all: 363 1587 / 388 1810
+* notice: prev exec diff / last date diff / accum: unq all: +1 +21 -0 -0 / +2 +37 -0 -0 / 2 37
+* notice: removed / changed dates: [] / [2023-09-20]
+
 2023-09-20T16:19:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6251352494 # 1913
 * notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-20
